# paper-summarizer

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  config.yaml  main.py  pipeline_diagram.html  pyproject.toml  test.ipynb
review-template/: Attention Is All You Need.md  Paper Review.md
src/: __init__.py  config.py  extractor.py  image_export.py  markdown_gen.py  pipeline.py  summarizer-en.py  summarizer-kr.py  summarizer.py  watcher.py
